--- a/ntask_api/package.json
+++ b/ntask_api/package.json
@@ -13,7 +13,9 @@
     "babel-cli": "^6.23.0",
     "babel-preset-node6": "^11.0.0",
     "consign": "^0.1.2",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "sequelize": "^3.30.2",
+    "sqlite3": "^3.1.8"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
