--- a/ntask_api/package.json
+++ b/ntask_api/package.json
@@ -12,6 +12,7 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.23.0",
     "babel-preset-node6": "^11.0.0",
+    "body-parser": "^1.17.0",
     "consign": "^0.1.2",
     "express": "^4.14.1",
     "sequelize": "^3.30.2",
