--- a/ntask_api/package.json
+++ b/ntask_api/package.json
@@ -9,17 +9,16 @@
   },
   "author": "Wagner Almeida",
   "dependencies": {
-    "babel": "^6.23.0",
-    "babel-cli": "^6.23.0",
+    "babel": "5.8.23",
     "babel-preset-node6": "^11.0.0",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.0",
     "consign": "^0.1.2",
     "express": "^4.14.1",
+    "jwt-simple": "^0.5.1",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0"
   }
 }
