--- a/ntask_api/package.json
+++ b/ntask_api/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node index.js",
+    "test": "NODE_ENV=test mocha test/**/*.js",
     "transpile-es2015": "babel src -d lib"
   },
   "author": "Wagner Almeida",
@@ -20,5 +21,11 @@
     "passport-jwt": "^2.2.1",
     "sequelize": "^3.30.2",
     "sqlite3": "^3.1.8"
+  },
+  "devDependencies": {
+    "babel-runtime": "^5.8.25",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "supertest": "^3.0.0"
   }
 }
