--- a/ntask_api/package.json
+++ b/ntask_api/package.json
@@ -19,9 +19,11 @@
     "babel-preset-node6": "^11.0.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.0",
+    "compression": "^1.6.2",
     "consign": "^0.1.2",
     "cors": "^2.8.1",
     "express": "^4.14.1",
+    "helmet": "^3.4.1",
     "jwt-simple": "^0.5.1",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
